# VulkanGFX

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  MakeProject.bat  MakeProject.sh  ReadMe.md  SystemEvents.hpp  WindowManager.cpp  WindowManager.hpp  conanfile.py  vcpkg.json
.github/workflows/: build_VS_RunSLN.yml  build_VS_Solution.yml  build_Xcode_Proj.yml  ci.yml  main.yml
Base/: Application.cpp  Application.hpp
Docs/: Conventions.md  WindowRenderer.md  vulkanRendered.md
Source/: Config.hpp  HelloWorld.cpp  Source.cpp
Source/Base/: Application.cpp  Application.hpp
Source/Core/Private/: ModuleCoreInterface.cpp  ModuleRegistery_Macros.hpp  ModuleRegistry.cpp  ModuleRunner.cpp
Source/Core/Public/: AModule.hpp  ModuleCoreInterface.hpp  ModuleRegistry.hpp  SystemEvents.cpp
Source/Examples/: vk_bootstrap_example.cpp
Source/Input/: ActionMap.hpp  IInputController.hpp  InputManager.cpp  InputManager.hpp
Source/Renderer/: VulkanRenderer.cpp  VulkanRenderer.hpp
Source/Renderer/Private/: WindowManager.cpp  WindowManager.hpp
Source/Renderer/Public/: WindowManager.hpp
Source/Utils/Events/Public/: Event.hpp  Logger.hpp
Source/Window/: Window.cpp  Window.hpp
